[package]
name = "named-binary-tag"
version = "0.6.0"
authors = ["vagola <vladislavs.golubs@yandex.ru>"]
description = "Format is used by minecraft for the various files in which it saves data"
edition = "2018"
license = "MIT"
homepage = "https://github.com/eihwaz/named-binary-tag"
repository = "https://github.com/eihwaz/named-binary-tag"
keywords = ["minecraft", "nbt", "io"]
readme = "README.md"

[lib]
name = "nbt"

[dependencies]
byteorder = "1.3"
linked-hash-map = "0.5"

[dependencies.flate]
package = "flate2"
version = "1.0"
optional = true

[dev-dependencies]
criterion = "0.3"

[features]
archive = ["dep:flate"]

[[bench]]
name = "decode"
harness = false

[[bench]]
name = "encode"
harness = false
